--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -130,3 +130,9 @@ table.dataTable thead .sorting_desc {
 .custom-select.form-control-sm {
     padding: 0.25rem 1.5rem;
 }
+
+/* Global icon margins */
+i, .fas, .far, .fab, .fa, [class*="icon-"] {
+    margin-left: 3px;
+    margin-right: 3px;
+}
