Cleanup: Remove dashboard debug info and stage all recent changes before major update

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -136,3 +136,10 @@ i, .fas, .far, .fab, .fa, [class*="icon-"] {
     margin-left: 3px;
     margin-right: 3px;
 }
+
+/* Global table text color */
+.table td,
+.table tr,
+.table th {
+    color: #000 !important;
+}
