--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -143,3 +143,45 @@ i, .fas, .far, .fab, .fa, [class*="icon-"] {
 .table th {
     color: #000 !important;
 }
+
+/* Navigation styling for better icon and text alignment */
+.navbar-nav .nav-link {
+    font-size: 0.875rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 0.75rem;
+}
+
+.navbar-nav .nav-link i,
+.navbar-nav .nav-link .fas,
+.navbar-nav .nav-link .far,
+.navbar-nav .nav-link .fab,
+.navbar-nav .nav-link .fa {
+    font-size: 0.875rem;
+    margin-right: 0.375rem;
+    margin-left: 0;
+    width: 1rem;
+    text-align: center;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #007bff !important;
+}
+
+/* Ensure consistent spacing in dropdown menus */
+.dropdown-menu .dropdown-item {
+    font-size: 0.875rem;
+    padding: 0.375rem 1rem;
+}
+
+.dropdown-menu .dropdown-item i,
+.dropdown-menu .dropdown-item .fas,
+.dropdown-menu .dropdown-item .far,
+.dropdown-menu .dropdown-item .fab,
+.dropdown-menu .dropdown-item .fa {
+    font-size: 0.875rem;
+    margin-right: 0.375rem;
+    width: 1rem;
+    text-align: center;
+}
