--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -463,6 +463,12 @@ i, .fas, .far, .fab, .fa, [class*="icon-"] {
     color: #343a40 !important;
 }
 
+/* Ensure bg-success badges also use the same green color */
+.bg-success {
+    background-color: #28a745 !important;
+    color: white !important;
+}
+
 /* Accordion Links - Make Black and Bold */
 .accordion .btn-link,
 #faqAccordion .btn-link,
@@ -471,7 +477,7 @@ i, .fas, .far, .fab, .fa, [class*="icon-"] {
     color: #000000 !important;
     text-decoration: none;
     font-weight: bold !important;
-    font-size: 1.1em;
+    font-size: 0.37em;
 }
 
 .accordion .btn-link:hover,
