--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -483,7 +483,7 @@ i, .fas, .far, .fab, .fa, [class*="icon-"] {
     color: #000000 !important;
     text-decoration: none;
     font-weight: bold !important;
-    font-size: 0.37em;
+    font-size: 1.125rem;
     border: none !important;
     outline: none !important;
     box-shadow: none !important;
